<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Box 1 -->
    <TextView
        android:id="@+id/box1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFB6C1"
        android:gravity="center"
        android:text="@string/attendance"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/box2"
        app:layout_constraintBottom_toTopOf="@id/box3"
        android:layout_margin="8dp"/>

    <!-- Box 2 -->
    <TextView
        android:id="@+id/box2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#ADD8E6"
        android:gravity="center"
        android:text="@string/notes"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/box1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/box4"
        android:layout_margin="8dp"/>

    <!-- Box 3 -->
    <TextView
        android:id="@+id/box3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#98FB98"
        android:gravity="center"
        android:text="@string/assignments"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/box1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/box4"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp"/>

    <!-- Box 4 -->
    <TextView
        android:id="@+id/box4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFD580"
        android:gravity="center"
        android:text="@string/events"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/box2"
        app:layout_constraintStart_toEndOf="@id/box3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
